--- a/source/stylesheets/variables/_type.scss
+++ b/source/stylesheets/variables/_type.scss
@@ -2,10 +2,11 @@
 //
 // Styleguide
 
-$base-font:       'Avenir', 'Avenir Next','Helvetica Neue','Segoe UI', 'Verdana', sans-serif !default;
+$base-font:       'Poppins', 'Helvetica Neue','Segoe UI', 'Verdana', sans-serif !default;
+$header-font:	  'Open Sans', 'Helvetica Neue','Segoe UI', 'Verdana', sans-serif !default;
 $monospace-font:  'Consolas', 'Monaco', 'Courier New', monospace !default;
 
-$heading:         $base-font !default;
+$heading:         $header-font !default;
 $body:            $base-font !default;
 $monospace:       $monospace-font !default;
 
