--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,8 +1,12 @@
 ---
-<!-- layout: "frontpage" -->
 title: Welcome to Middleman
 ---
 
-<h1>
-  Cryptobeers
-</h1>
+<h1>test test test this again</h1>
+
+<% page_articles.each_with_index do |article, i| %>
+  <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
+  <!-- use article.summary(250) if you have Nokogiri available to show just
+       the first 250 characters -->
+  <%= article.body %>
+<% end %>
