--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,12 +1,34 @@
 ---
-title: Welcome to Middleman
+title: Cryptobeers -- by Cryptominded
 ---
 
-<h1>test test test this again</h1>
+<%= partial 'partials/home-hero' %>
 
-<% page_articles.each_with_index do |article, i| %>
-  <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
-  <!-- use article.summary(250) if you have Nokogiri available to show just
-       the first 250 characters -->
-  <%= article.body %>
-<% end %>
+<div class="wrapper-large">
+	
+	<div class="ta-center">
+		<h1>Upcoming events</h1>
+	</div>
+
+	<div class="events">
+
+		<% page_articles.each_with_index do |article| %>
+				<div class="events__card">
+					<div class="image">
+						<a href="<%= article.data.meetup_link %>">
+							<img src="<%= lorem.image('320x220') %>">
+							<div class="overlay"><button class="btn--secondary">RSVP</button></div>
+						</a>
+					</div>
+					<div class="details">
+						<span class="date"><%= article.date.strftime('%A, %e %B %Y') %></span> • <span class="city"><%= article.data.City %></span>
+						<a href="<%= article.data.meetup_link %>"><h4><%= article.title %></h4></a>
+						<%= article.body %>
+						<span><strong>Organised by:</strong> <%= article.data.organised_by %></span>
+					</div>
+				</div>
+		<% end %>
+		
+	</div>
+
+</div>
