--- a/source/stylesheets/components/_buttons.scss
+++ b/source/stylesheets/components/_buttons.scss
@@ -19,16 +19,17 @@ Styleguide 2.0
   border: none;
   border-radius: .2rem;
   box-sizing: border-box;
+  font-size: 16px;
   color: $white;
   cursor: pointer;
   display: inline-block;
-  height: 4.8rem;
-  line-height: 4.8rem;
+  height: 4rem;
+  line-height: 4rem;
   max-width: 100%;
   transition-property: background-color;
   transition-duration: 200ms;
   margin: 0 auto;
-  padding: 0 3rem;
+  padding: 0 2rem;
   text-align: center;
   user-select: none;
   width: auto;
@@ -54,9 +55,54 @@ Styleguide 2.0
   }
 }
 
+.btn-cta {
+  background-color: $cta;
+
+  &:link,
+  &:visited{
+    color: $white;
+    text-decoration: none;
+  }
+
+  &:focus,
+  &:hover {
+    background-color: $cta-dark;
+    color: $white;
+  }
+
+  &:focus{
+    outline: .1rem dotted $gray3;
+  }
+
+  &:active{
+    background-color: $cta;
+  }
+}
+
 .btn--secondary{
   background-color: $gray6;
   color: $gray1;
+
+  &:link,
+  &:visited{
+    color: $gray1;
+  }
+
+  &:focus,
+  &:hover{
+    background-color: $gray5;
+    color: $gray1;
+  }
+
+  &:active{
+    color: $gray3;
+  }
+}
+
+.btn--invert{
+  background-color: transparent;
+  color: $white;
+  border: 1px solid $white;
 
   &:link,
   &:visited{
