--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -1,3 +1,149 @@
 @import "variables";
 @import "support";
 @import "components";
+
+header {
+	background: $white;
+	height: 100px;
+
+	.inner-header {
+		height: 100px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+
+		.logo {
+		}
+
+		nav {
+		float: right;
+		text-align: right;
+		position: relative;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+
+			a {
+				color: $gray3;
+				font-weight: 300;
+				text-decoration: none;
+
+				&:hover {
+					color: $gray1;
+				}
+			}
+
+			ul {
+				list-style-type: none;
+				display: flex;
+				flex-direction: row;
+				justify-content: flex-start;
+				margin-bottom: 0;
+				padding: 0;
+			}
+			li {
+				list-style-type: none;
+				margin-left: 2em;
+			}
+		}
+	}
+}
+
+.hero {
+
+	background-color: $brandcolor;
+	color: $white;
+
+	&__intro {
+
+	}
+
+	&__image {
+		position: relative;
+
+		img {
+			position: absolute;
+			bottom: 0;
+		}
+	}
+}
+
+.events {
+	margin-top: 15px;
+
+	&__card {
+		display: flex;
+		background: $white;
+		margin-bottom: 25px;
+	    -webkit-box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.15);
+		-moz-box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.15);
+		box-shadow: 0px 3px 15px 0px rgba(0,0,0,0.15);
+		transition-property: box-shadow;
+		transition-duration: 200ms;
+
+		&:hover {
+			-webkit-box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.15);
+			-moz-box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.15);
+			box-shadow: 0px 3px 25px 0px rgba(0,0,0,0.25);
+		}
+
+		&:hover img {
+			opacity: 0.2;
+		}
+
+		.image {
+			position:relative;
+			display: inline-block;
+			min-width: 320px;
+			background-color: #45448B;
+		}
+
+		.overlay {
+		    display:none;
+		}
+
+		&:hover .overlay {
+		    width:100%;
+		    height:100%;
+		    background:rgba(0,0,0,.3);
+		    position:absolute;
+		    top:0;
+		    left:0;
+		    text-align: center;
+		    align-items: center;
+		    display:inline-block;
+		    -webkit-box-sizing:border-box;
+		    -moz-box-sizing:border-box;
+		    box-sizing:border-box;
+
+		    button {
+		    	margin-top: 85px;
+		    	align-items: center;
+		    }
+
+	    /* All other styling - see example */
+
+		    img {
+		        vertical-align:top; /* Default is baseline, this fixes a common alignment issue */
+		    }
+		}
+
+		.details {
+			padding: 15px 25px;
+
+			.date { color: $gray3; font-weight: 300; }
+			.city { color: $gray3; font-weight: 300; }
+
+			h4 { padding-bottom: 15px; padding-top: 0; color: $gray1; font-weight: 600; }
+			a { text-decoration: none; }
+
+			p { 
+				font-weight: 300;
+				padding-bottom: 10px;
+			}
+
+		}
+	}
+
+}
