--- a/source/stylesheets/support/_base.scss
+++ b/source/stylesheets/support/_base.scss
@@ -24,6 +24,7 @@ body{
   line-height: $line-height;
   min-height: 100%;
   position: relative;
+  background: $bgcolor;
 }
 
 h1, h2, h3, h4, h5, h6{
