--- a/source/stylesheets/variables/_colors.scss
+++ b/source/stylesheets/variables/_colors.scss
@@ -5,6 +5,8 @@
 // primary colors
 $primary:       #E83FB8 !default;
 $primary-dark:  darken($primary, 5%) !default;
+$cta:			#7DC855 !default;
+$cta-dark:		darken($cta, 5%) !default;
 
 $link:          #4076D4 !default;
 $link--visited: #9140D4 !default;
@@ -20,5 +22,8 @@ $gray3:         #7d7d7e !default;
 $gray4:         #cdcdce !default;
 $gray5:         #dededf !default;
 $gray6:         #efeff0 !default;
+
+$bgcolor:		#f3f3f3 !default;
+$brandcolor:	#1E1758 !default;
 
 $white:         #ffffff !default;
