--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,7 +7,7 @@ title: Cryptobeers -- by Cryptominded
 <div class="wrapper-large">
 	
 	<div class="ta-center">
-		<h1>Upcoming events</h1>
+		<h3 class="fw-semibold">Upcoming events</h3>
 	</div>
 
 	<div class="events">
