add image to cms & index

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -16,7 +16,7 @@ title: Cryptobeers -- by Cryptominded
 				<div class="events__card">
 					<div class="image">
 						<a href="<%= article.data.meetup_link %>">
-							<img src="<%= lorem.image('320x220') %>">
+							<img src="<%= article.data.image %>" width="320" height="220">
 							<div class="overlay"><button class="btn--secondary">RSVP</button></div>
 						</a>
 					</div>
