--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,13 +7,15 @@ title: Cryptobeers -- by Cryptominded
 <div class="wrapper-large">
 
   <div class="ta-center">
-    <h3 class="fw-semibold">Upcoming events</h3>
+    <h3 class="fw-semibold">Upcoming this month</h3>
   </div>
 
   <div class="events">
     <% group_by_month(page_articles.reverse).each do |month, articles| %>
 
-      <%= month %>
+      <div class="ta-center months">
+    	<h4 class="fw-semibold"><%= month %></h4>
+  	  </div>
 
       <% articles.each do |article| %>
 
@@ -28,7 +30,8 @@ title: Cryptobeers -- by Cryptominded
 	    <span class="date"><%= article.date.strftime('%A, %e %B %Y') %></span> • <span class="city"><%= article.data.City %></span>
 	    <a href="<%= article.data.meetup_link %>"><h4><%= article.title %></h4></a>
 	    <%= article.body %>
-	    <span><strong>Organised by:</strong> <%= article.data.organised_by %></span>
+	    <span class="organisor"><strong>Organised by:</strong> <%= article.data.organised_by %></span>
+	    <span class="sponsor"><strong>Made possible by:</strong> <%= article.data.possible_by %></span>
 	  </div>
         </div>
 
