--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,27 +11,26 @@ title: Cryptobeers -- by Cryptominded
   </div>
 
   <div class="events">
-    <% group_by_month(page_articles.reverse).each do |month, articles| %>
+    <% group_by_month(data.events).each do |month, articles| %>
 
       <div class="ta-center months">
     	<h4 class="fw-semibold"><%= month %></h4>
-  	  </div>
+      </div>
 
       <% articles.each do |article| %>
-
         <div class="events__card">
 	  <div class="image">
-	    <a href="<%= article.data.meetup_link %>">
-	      <img src="<%= article.data.image %>" width="320" height="220">
+	    <a href="<%= article.meetup_link %>">
+	      <img src="<%= article.image %>" width="320" height="220">
 	      <div class="overlay"><button class="btn--secondary">RSVP</button></div>
 	    </a>
 	  </div>
 	  <div class="details">
-	    <span class="date"><%= article.date.strftime('%A, %e %B %Y') %></span> • <span class="city"><%= article.data.City %></span>
-	    <a href="<%= article.data.meetup_link %>"><h4><%= article.title %></h4></a>
+	    <span class="date"><%= article.strftime('%A, %e %B %Y') %></span> • <span class="city"><%= article.City %></span>
+	    <a href="<%= article.meetup_link %>"><h4><%= article.title %></h4></a>
 	    <%= article.body %>
-	    <span class="organisor"><strong>Organised by:</strong> <%= article.data.organised_by %></span>
-	    <span class="sponsor"><strong>Made possible by:</strong> <%= article.data.possible_by %></span>
+	    <span class="organisor"><strong>Organised by:</strong> <%= article.organised_by %></span>
+	    <span class="sponsor"><strong>Made possible by:</strong> <%= article.possible_by %></span>
 	  </div>
         </div>
 
